--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -64,6 +64,10 @@ body {
     grid-column: span 2;
   }
 
+  .span-2-vertical {
+    grid-row: span 2;
+  }
+
 }
 
 .wrap {
@@ -121,82 +125,94 @@ header {
   p {
     color: $light-gray;
   }
+}
 
-  nav {
-    a {
-      border-radius: 50px;
-      padding: 6px 16px;
-      font-size: 0.9rem;
-      font-weight: 500;
-      text-decoration: none;
-      color: $light-gray;
-      
-      &.active {
-        background: $royal-blue;
-        color: white;
-      }
+.round-link {
+  border-radius: 50px;
+  padding: 6px 16px;
+  font-size: 0.9rem;
+  font-weight: 500;
+  text-decoration: none;
+  color: $light-gray;
   
-      &:not(.active):hover {
-        background: $bg-gray;
-      }
-    }
+  &.active {
+    background: $royal-blue;
+    color: white;
+  }
+
+  &:not(.active):hover {
+    background: $bg-gray;
   }
 }
 
 footer {
-  font-size: 0.8rem;
-  padding: 1rem;
-  color: rgba($default-text, 0.4);
-}
+  font-size: 0.9rem;
+  padding: 1rem 0 2rem;
+  color: $light-gray;
 
-.project {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  .project__title {
-    font-weight: 500;
-    margin-bottom: 10px;
-    font-size: 1rem
-  }
-
-  .project__description {
-    line-height: 1.3;
-    margin-bottom: 10px;
-  }
-
-  .project__links {
+  & > div {
     display: flex;
-    
-    a {
-      padding: 6px 13px;
-      color: $default-text;
-      background: $bg-gray;
-      border-radius: 50px;
-      margin-right: 5px;
-      display: block;
-      font-size: 0.8rem;
-      text-decoration: none;
+    width: 100%;
+  }
 
-      &:hover {
-        background: $royal-blue;
-        color: white;
-      }
-    }
+  .copyright {
+    flex-grow: 1;
   }
 }
 
-.about {
-  line-height: 1.3;
-
+.content {
   h3 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+  }
+
+  p {
+    line-height: 130%;
   }
 
   p:not(:last-child) {
     margin-bottom: 0.8rem;
   }
+
+  .project-list {
+    margin-top: 1rem;
+
+    li {
+      margin-bottom: 10px;
+      transition: 0.1s ease;
+
+      &:hover {
+        transform: translateX(5px);
+      }
+    }
+
+    .project-list__title {
+      font-weight: 500;
+      display: block;
+      line-height: 130%;
+    }
+
+    .project-list__subtitle {
+      color: $light-gray;
+    }
+
+    a {
+      color: $default-text;
+      text-decoration: none;
+    }
+  }
+}
+
+.badge {
+  font-size: 0.75rem;
+  background: $royal-blue;
+  border-radius: 50px;
+  padding: 0.3rem 0.7rem;
+  color: white;
+  font-weight: 500;
+  margin-right: 8px;
 }
 
 .link {
