--- a/src/styles/partials/_code.scss
+++ b/src/styles/partials/_code.scss
@@ -9,13 +9,13 @@ pre {
 	font-size: 0.7rem;
 	margin: 0;
 	padding: 0;
-	color: #d3d3d3;
+	color: #c9c9c9;
 
 	.string { color: #3cb66f; }
 	.number { color: darkorange; }
 	.boolean { color: #f1c40f; }
 	.null { color: magenta; }
-	.key { color: #999; }
+	.key { color: #909090; }
 
 	a {
 		color: #3cb66f;
