--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 $font-bold: 500;
 $font-mono: 'Source Code Pro', monospace;
-$font-sans-serif: -apple-system,
+$font-sans-serif: 'Karla',
+  -apple-system,
   BlinkMacSystemFont,
   "Segoe UI",
   Roboto,
@@ -12,7 +13,7 @@ $font-sans-serif: -apple-system,
   "Segoe UI Symbol";
 
 $blue: #3498db;
-$gray: rgb(107, 119, 140);
+$gray: #6B778C;
 $light-gray: #F4F5F7;
 $default-text: #484868;
 $royal-blue: #5985F7;
@@ -25,8 +26,8 @@ $tablet-breakpoint: 768px;
 
 html, body {
   color: $default-text;
-  font-family: 'Karla';
-  background: linear-gradient(rgb(224, 209, 250), rgb(17, 115, 221));
+  font-family: $font-sans-serif;
+  background: linear-gradient(#E0D1FA, #1173DD);
 }
 
 .container {
