--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,8 @@
 $font-bold: 500;
 $font-mono: 'Source Code Pro', monospace;
-$font-sans-serif: 'Karla', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-  Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-  'Segoe UI Symbol';
+$font-sans-serif: 'Avenir Next', Avenir, -apple-system, BlinkMacSystemFont,
+  'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+  'Segoe UI Emoji', 'Segoe UI Symbol';
 
 $blue: #3498db;
 $gray: #6b778c;
@@ -105,7 +105,7 @@ header {
       font-weight: normal;
       font-size: 2rem;
       margin-bottom: 5px;
-      font-weight: 700;
+      font-weight: 600;
     }
 
     p {
@@ -155,6 +155,7 @@ footer {
     margin-bottom: 0.8rem;
     display: flex;
     align-items: center;
+    font-weight: $font-bold;
   }
 
   p {
