--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -159,7 +159,7 @@ footer {
   }
 
   p {
-    line-height: 130%;
+    line-height: 150%;
     font-size: 1rem;
   }
 
@@ -247,6 +247,15 @@ footer {
 
   &:not(.active):hover {
     background: $light-gray;
+  }
+
+  &:focus {
+    box-shadow: inset 0 0 0 2px $royal-blue;
+    outline: none;
+  }
+
+  &:not(.active):active {
+    background: #deebff;
   }
 }
 
