FEAT: adjust styling

--- a/src/styles/partials/_console.scss
+++ b/src/styles/partials/_console.scss
@@ -1,12 +1,12 @@
 .app-selector {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  transform: scale(0.9);
+  transform: translateY(-20%);
   opacity: 0;
   transition: $slow-duration ease-in-out;
 
   &.interactive-mode {
-    transform: scale(1);
+    transform: translateY(0);
     opacity: 1;
   }
 }
